--- a/legacyVersion/LegacyTUMensa/LegacyTUMensa/MainPage.xaml
+++ b/legacyVersion/LegacyTUMensa/LegacyTUMensa/MainPage.xaml
@@ -86,7 +86,7 @@
                               HorizontalAlignment="Stretch"
                               VerticalAlignment="Stretch"
                               Width="300"
-                              SelectionChanged="MensaListView_SelectionChanged"/>
+                              SelectionChanged="MensaListView_SelectionChanged" Margin="50,0,0,0"/>
 
                     <Grid Grid.Row="4">
                         <Grid.ColumnDefinitions>
