--- a/FC_TUD_Mensa/FC_TUD_Mensa/MainPage.xaml
+++ b/FC_TUD_Mensa/FC_TUD_Mensa/MainPage.xaml
@@ -47,7 +47,8 @@
                             Width="50"
                             Height="50"
                             Grid.Column="0"
-                            Grid.Row="3"
+                            Grid.Row="2"
+                            VerticalAlignment="Top"
                             FontFamily="Segoe MDL2 Assets"
                             Click="ReloadButton_Click"
                             IsEnabled="False"
