--- a/FC_TUD_Mensa/FC_TUD_Mensa/MainPage.xaml
+++ b/FC_TUD_Mensa/FC_TUD_Mensa/MainPage.xaml
@@ -88,7 +88,28 @@
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center"
                                TextAlignment="Center"/>
-
+                    <Button     Grid.Row="2" Grid.Column="0"
+                                Width="50"
+                                Height="50"
+                                VerticalAlignment="Bottom"
+                                x:Name="UpButton"
+                                FontFamily="Segoe MDL2 Assets"
+                                IsEnabled="False"
+                                Visibility="Collapsed"
+                                Click="UpButton_Click"
+                                Content="&#xE72A;"
+                                />
+                    <Button     Grid.Row="3" Grid.Column="0"
+                                Width="50"
+                                Height="50"
+                                VerticalAlignment="Top"
+                                x:Name="DownButton"
+                                FontFamily="Segoe MDL2 Assets"
+                                IsEnabled="False"
+                                Visibility="Collapsed"
+                                Click="DownButton_Click"
+                                Content="&#xE72B;"
+                                />
                 </Grid>
             </SplitView.Pane>
             <Grid>
